@@ -3,7 +3,6 @@ package pl.training.shop;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
-// ADD TO VM OPTIONS: --add-modules=jdk.unsupported
 @SpringBootApplication
 public class Application {
 
